# vector_read_removal

./: .gitignore  README.md  pyproject.toml
vector_read_removal/: __init__.py  vrr_cli.py  vrr_funcs.py
